# ComputerGraphicsProject

./: CMakeLists.txt  Noise.cpp  Noise.hpp  README.md  main.cpp
shaders/common/: DebugMeshShader.frag  DebugMeshShader.vert  DebugPointShader.frag  DebugPointShader.vert  Triplanar.frag  Triplanar.vert  screen.vert  simple.frag  simple.vert  triangle.frag  triangle.vert
src/EDAN35/: CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.h  Crosshair.cpp  Crosshair.h  DebugPointsRenderer.cpp  DebugPointsRenderer.h  MarchingCubes.cpp  MarchingCubes.h  Mesh.h  PerlinNoise.cpp  PerlinNoise.h  SculptingRaycaster.cpp  SculptingRaycaster.h  TerrainGrid.cpp  TerrainGrid.h  TerrainMesh.cpp  TerrainMesh.h  main.cpp  main.hpp
